...
                                .padding()
                                .background(.black)
                                .cornerRadius(10)
                                .zIndex(1)
                        }
                    }
                    .alert("Error detected:", isPresented: $parentViewModel.showAlert) {
                        Button ("Close") {
                        }
                    } message: {
                        Text(parentViewModel.alertMessage)
                    }
                    .accessibilityIdentifier("ErrorDetectedAlert")
                    .onReceive(parentViewModel.$selectedImage) { _ in
...
