...
            .toolbar(content: {
                ToolbarItem (placement: .topBarLeading){
                    Button {
                        showAlert = true
                        
                    } label: {
                        Label("", systemImage: "xmark")
                    }
                    .alert("Are you sure?", isPresented: $showAlert) {
                        Button(action: {
                            self.presentationMode.wrappedValue.dismiss()
                        }) {
                            Text("Yes - delete my scan")
...
                    } message: {
                        Text("You will lose the log data from this scan.")
                    }
                }
                
                ToolbarItem (placement: .topBarTrailing) {
                    DownloadView(data: $tempdata)
                }
            })
            .tint(.white)
            .toolbarBackground(
                Color(red: 0.0, green: 0.2, blue: 0.5),
                for: .navigationBar
...
